数据库迁移

--- a/src/YJCA.Blog.DbMigrator/YJCA.Blog.DbMigrator.csproj
+++ b/src/YJCA.Blog.DbMigrator/YJCA.Blog.DbMigrator.csproj
@@ -8,12 +8,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\YJCA.Blog.Domain\YJCA.Blog.Domain.csproj" />
 		<ProjectReference Include="..\YJCA.Blog.EntityFrameWorkCore\YJCA.Blog.EntityFrameWorkCore.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <None Update="appsettings.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
 
