--- a/src/YJCA.Blog.EntityFrameWorkCore/YJCA.Blog.EntityFrameWorkCore.csproj
+++ b/src/YJCA.Blog.EntityFrameWorkCore/YJCA.Blog.EntityFrameWorkCore.csproj
@@ -26,4 +26,9 @@
 		<ProjectReference Include="..\YJCA.Blog.Domain\YJCA.Blog.Domain.csproj" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+
 </Project>
