--- a/test/YJCA.Blog.Application.Tests/YJCA.Blog.Application.Tests.csproj
+++ b/test/YJCA.Blog.Application.Tests/YJCA.Blog.Application.Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\YJCA.Blog.Application\YJCA.Blog.Application.csproj" />
+  </ItemGroup>
+
 </Project>
