--- a/src/YJCA.Blog.Domain/YJCA.Blog.Domain.csproj
+++ b/src/YJCA.Blog.Domain/YJCA.Blog.Domain.csproj
@@ -13,4 +13,7 @@
 	  <NoWarn>1701;1702;8618;</NoWarn>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
+	</ItemGroup>
 </Project>
