新增Knife4UI接口文档，及默认测试接口

--- a/src/YJCA.Blog.Application.Contracts/YJCA.Blog.Application.Contracts.csproj
+++ b/src/YJCA.Blog.Application.Contracts/YJCA.Blog.Application.Contracts.csproj
@@ -5,4 +5,8 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\YJCA.Blog.Domain\YJCA.Blog.Domain.csproj" />
+	</ItemGroup>
+
 </Project>
