--- a/src/YJCA.Blog.DbMigrator/YJCA.Blog.DbMigrator.csproj
+++ b/src/YJCA.Blog.DbMigrator/YJCA.Blog.DbMigrator.csproj
@@ -8,11 +8,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;8602;</NoWarn>
+	  <NoWarn>1701;1702;8602;NU1608</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>1701;1702;8602;</NoWarn>
+	  <NoWarn>1701;1702;8602;NU1608</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
