--- a/src/YJCA.Blog.EntityFrameWorkCore/YJCA.Blog.EntityFrameWorkCore.csproj
+++ b/src/YJCA.Blog.EntityFrameWorkCore/YJCA.Blog.EntityFrameWorkCore.csproj
@@ -6,6 +6,14 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;NU1608</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;NU1608</NoWarn>
+	</PropertyGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.*" />
