--- a/src/YJCA.Blog.HttpApi.Host/YJCA.Blog.HttpApi.Host.csproj
+++ b/src/YJCA.Blog.HttpApi.Host/YJCA.Blog.HttpApi.Host.csproj
@@ -1,9 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>bin\Debug\net6.0\SwaggerDemo.xml</DocumentationFile>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;NU1608;8602</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;NU1608;8602</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\YJCA.Blog.Application.Contracts\YJCA.Blog.Application.Contracts.csproj" />
+    <ProjectReference Include="..\YJCA.Blog.Commons\YJCA.Blog.Commons.csproj" />
+    <ProjectReference Include="..\YJCA.Blog.EntityFrameWorkCore\YJCA.Blog.EntityFrameWorkCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.*" />
+  </ItemGroup>
 
 </Project>
