--- a/src/YJCA.Blog.DbMigrator/appsettings.json
+++ b/src/YJCA.Blog.DbMigrator/appsettings.json
@@ -3,6 +3,7 @@
     "Enable": "Sqlite",
     "SqlServer": "Server=(LocalDb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;TrustServerCertificate=True",
     "MySql": "Server=localhost;Port=3306;Database=Cloud.CodeDB;Uid=root;Pwd=123456;CharSet=utf8;",
+    "PostgreSQL": "Driver={PostgreSQL ODBC Driver(UNICODE)};Server=127.0.0.1;Port=5432;Database=postgres;UID=postgres;PWD=********",
     "Sqlite": "Data Source=BlogDB.db;"
   },
   "OpenIddict": {
