--- a/src/YJCA.Blog.EntityFrameWorkCore/YJCA.Blog.EntityFrameWorkCore.csproj
+++ b/src/YJCA.Blog.EntityFrameWorkCore/YJCA.Blog.EntityFrameWorkCore.csproj
@@ -7,11 +7,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;NU1608</NoWarn>
+		<NoWarn>1701;1702;NU1608</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>1701;1702;NU1608</NoWarn>
+		<NoWarn>1701;1702;NU1608</NoWarn>
 	</PropertyGroup>
 
 
@@ -27,6 +27,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.*" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.*" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.*" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.*" />
 	</ItemGroup>
 
 
@@ -36,7 +37,7 @@
 
 
 	<ItemGroup>
-	  <Folder Include="Migrations\" />
+		<Folder Include="Migrations\" />
 	</ItemGroup>
 
 </Project>
