--- a/src/CytoBox.HttpApi.Host/appsettings.json
+++ b/src/CytoBox.HttpApi.Host/appsettings.json
@@ -7,10 +7,12 @@
   },
   "ConnectionStrings": {
     "Enable": "Sqlite",
-    "SqlServer": "Server=(LocalDb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;TrustServerCertificate=True",
-    "MySql": "Server=localhost;Port=3306;Database=Cloud.CodeDB;Uid=root;Pwd=123456;CharSet=utf8;",
-    "PostgreSQL": "Driver={PostgreSQL ODBC Driver(UNICODE)};Server=127.0.0.1;Port=5432;Database=postgres;UID=postgres;PWD=********",
-    "Sqlite": "Data Source=BlogDB.db;"
+    "SqlServer": "Server=(LocalDb)\\MSSQLLocalDB;Database=CytoBox;Trusted_Connection=True;TrustServerCertificate=True",
+    "MySql": "Server=localhost;Port=3306;Database=CytoBox;Uid=root;Pwd=123456;CharSet=utf8;",
+    "PostgreSQL": "Driver={PostgreSQL ODBC Driver(UNICODE)};Server=127.0.0.1;Port=5432;Database=CytoBox;UID=postgres;PWD=********",
+    "Sqlite": "Data Source=CytoBox.db;",
+    "ReadConnStr": "Data Source=CytoBox.db;",
+    "QueryDbStrategy": "" // Random Polling
   },
   "IsEnableCors": true,
   "AllowedHosts": "*"
