--- a/librarys/CytoBox.ServiceRegistration/CytoBox.ServiceRegistration.csproj
+++ b/librarys/CytoBox.ServiceRegistration/CytoBox.ServiceRegistration.csproj
@@ -1,14 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Nullable>enable</Nullable>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<Nullable>enable</Nullable>
+		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+		<Title>CytoBox.ServiceRegistration</Title>
+		<Authors>Junjie Pan</Authors>
+		<Description>在程序启动时通过反射进行依赖注入</Description>
+		<PackageProjectUrl>https://github.com/Gun319/CytoBox.Core/tree/master/librarys/CytoBox.ServiceRegistration</PackageProjectUrl>
+		<Copyright></Copyright>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<EnableNETAnalyzers>True</EnableNETAnalyzers>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="System.Reflection.Metadata" Version="1.6.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+		<PackageReference Include="System.Reflection.Metadata" Version="1.6.0" />
+	</ItemGroup>
 
 </Project>
