--- a/src/CytoBox.Application/CytoBox.Application.csproj
+++ b/src/CytoBox.Application/CytoBox.Application.csproj
@@ -2,13 +2,12 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>disable</ImplicitUsings>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\CytoBox.Application.Contracts\CytoBox.Application.Contracts.csproj" />
-		<ProjectReference Include="..\CytoBox.Core\CytoBox.Core.csproj" />
 	</ItemGroup>
 
 </Project>
