--- a/src/CytoBox.Core/CytoBox.Core.csproj
+++ b/src/CytoBox.Core/CytoBox.Core.csproj
@@ -2,7 +2,19 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>disable</ImplicitUsings>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.*" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.*" />
+		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+		<PackageReference Include="System.Text.Json" Version="7.*" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\Librarys\CytoBox.ServiceRegistration\CytoBox.ServiceRegistration.csproj" />
+	</ItemGroup>
 </Project>
