--- a/src/CytoBox.Domain/CytoBox.Domain.csproj
+++ b/src/CytoBox.Domain/CytoBox.Domain.csproj
@@ -1,19 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;8618;</NoWarn>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>1701;1702;8618;</NoWarn>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
+	  <Folder Include="Entity\" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="IdentityModel" Version="6.1.0" />
+	</ItemGroup>
+
 </Project>
