--- a/src/CytoBox.HttpApi.Host/CytoBox.HttpApi.Host.csproj
+++ b/src/CytoBox.HttpApi.Host/CytoBox.HttpApi.Host.csproj
@@ -18,12 +18,15 @@
 
   <ItemGroup>
     <PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CytoBox.Application\CytoBox.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
