--- a/src/CytoBox.DbMigrator/appsettings.json
+++ b/src/CytoBox.DbMigrator/appsettings.json
@@ -5,5 +5,18 @@
     "MySql": "Server=localhost;Port=3306;Database=Cloud.CodeDB;Uid=root;Pwd=123456;CharSet=utf8;",
     "PostgreSQL": "Driver={PostgreSQL ODBC Driver(UNICODE)};Server=127.0.0.1;Port=5432;Database=postgres;UID=postgres;PWD=********",
     "Sqlite": "Data Source=BlogDB.db;"
+  },
+  "OpenIddict": {
+    "Applications": {
+      "Blog_Web": {
+        "ClientId": "Blog_Web",
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "https://localhost:44398"
+      },
+      "Blog_Swagger": {
+        "ClientId": "Blog_Swagger",
+        "RootUrl": "https://localhost:44324"
+      }
+    }
   }
 }
