--- a/src/CytoBox.Application.Contracts/CytoBox.Application.Contracts.csproj
+++ b/src/CytoBox.Application.Contracts/CytoBox.Application.Contracts.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
