--- a/src/CytoBox.Domain/CytoBox.Domain.csproj
+++ b/src/CytoBox.Domain/CytoBox.Domain.csproj
@@ -1,16 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;8618;</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;8618;</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Folder Include="Entity\" />
+	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
 	</ItemGroup>
-
-	<ItemGroup>
-	  <PackageReference Include="IdentityModel" Version="6.1.0" />
-	</ItemGroup>
-
 </Project>
