--- a/src/CytoBox.DbMigrator/CytoBox.DbMigrator.csproj
+++ b/src/CytoBox.DbMigrator/CytoBox.DbMigrator.csproj
@@ -7,26 +7,15 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;8602;NU1608</NoWarn>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>1701;1702;8602;NU1608</NoWarn>
-	</PropertyGroup>
-
 	<ItemGroup>
-	  <None Remove="appsettings.json" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Content Include="appsettings.json">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\CytoBox.EntityFrameWorkCore\CytoBox.EntityFrameWorkCore.csproj" />
+		<ProjectReference Include="..\CytoBox.EntityFrameWorkCore\CytoBox.EntityFrameWorkCore.csproj" />
 	</ItemGroup>
 
 </Project>
