--- a/src/CytoBox.Domain/CytoBox.Domain.csproj
+++ b/src/CytoBox.Domain/CytoBox.Domain.csproj
@@ -1,19 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;8618;</NoWarn>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>1701;1702;8618;</NoWarn>
-	</PropertyGroup>
-
 	<ItemGroup>
-	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.*" />
+	  <Folder Include="Dto\" />
 	</ItemGroup>
 </Project>
