--- a/src/CytoBox.HttpApi.Host/CytoBox.HttpApi.Host.csproj
+++ b/src/CytoBox.HttpApi.Host/CytoBox.HttpApi.Host.csproj
@@ -1,29 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>bin\Debug\net6.0\SwaggerDemo.xml</DocumentationFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<DocumentationFile>bin\Debug\net6.0\SwaggerDemo.xml</DocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;NU1608;8602</NoWarn>
-  </PropertyGroup>
+	<ItemGroup>		
+		<PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.*" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.*" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.*" />
+	</ItemGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;NU1608;8602</NoWarn>
-  </PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\CytoBox.Application\CytoBox.Application.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.*" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CytoBox.Application\CytoBox.Application.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
 
 </Project>
