--- a/src/CytoBox.HttpApi.Host/CytoBox.HttpApi.Host.csproj
+++ b/src/CytoBox.HttpApi.Host/CytoBox.HttpApi.Host.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
@@ -10,8 +10,8 @@
 
 	<ItemGroup>		
 		<PackageReference Include="IGeekFan.AspNetCore.Knife4jUI" Version="0.0.*" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.*" />
-		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.4.*" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
